--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Title">
+        <item name="android:textSize">25sp</item>
+    </style>
+
+    <style name="Artist">
+        <item name="android:textSize">17sp</item>
+    </style>
 </resources>
