--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
     android:padding="16dp">
 
     <androidx.core.widget.ContentLoadingProgressBar
+        style="?android:attr/progressBarStyle"
         android:id="@+id/loading"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:indeterminate="true"
         app:layout_constraintBottom_toBottomOf="@+id/llSong"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +82,7 @@
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/btnChangeUser"
         android:gravity="center"
-        android:visibility="gone"
+        android:visibility="invisible"
         tools:visibility="visible">
 
         <ImageView
